# table2tex

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tabela.json  table2tex.py
assets/: example.tex  tabela.csv  tabela.json  tabela.xlsx
example/: example1.py
table2tex/: __init__.py  engine.py
